--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -16,10 +16,6 @@
         <input type="hidden" id="cardsInGame" data-value="{{ cardsInGame }}">
     </div>
     <div class="room-container">
-        {% if admin == 0 %}
-            <p id="role"> Votre rôle est : </p>
-        {% endif %}
-
         <div class="lobby-div">
             <h2 class="head-title-lobby">LOBBY</h2>
 
@@ -29,17 +25,44 @@
                     <span id="ingame-user"></span>/<span id="limit-user"></span> joueur(s)
                 </div>
 
-
                 <div class="list-people" id="list-people">
                 </div>
-
-                <a class="btn btn-primary" href="#" role="button" id="btn-vibration">Faire vibrer</a>
-
 
                 {% if admin == 1 %}
                     <a class="btn btn-primary" href="#" role="button" id="btn-launch-game">Lancer la partie</a>
                 {% endif %}
             </div>
+        </div>
+
+        <div class="in-game-div">
+            <h2 class="head-title-lobby">IN GAME</h2>
+
+            {% if admin == 0 %}
+                <div class="in-game-player-div">
+                    <div class="container-game-card">
+                        <div class="game-card">
+                            <div class="card-game-front"></div>
+                            <div class="card-game-back">
+                                <div class="role-card">
+                                    <p id="role"></p>
+                                </div>
+                                <div class="order-card">
+                                    <p></p>
+                                </div>
+                                <div class="power-card">
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+
+            {% if admin == 1 %}
+                <div class="in-game-admin-div">
+                    <h2 class="head-title-lobby"></h2>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
