Add role for admin when party started

--- a/public/stylesheets/room.css
+++ b/public/stylesheets/room.css
@@ -1,3 +1,10 @@
+.role-card {
+	text-align: center;
+	padding: 15px;
+	font-size: 24px;
+	color: grey;
+}
+
 .container-game-card {
 	width: 215px;
 	height: 300px;
