--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -60,7 +60,8 @@
 
             {% if admin == 1 %}
                 <div class="in-game-admin-div">
-                    <h2 class="head-title-lobby"></h2>
+                    <div class="container-game-card">
+                    </div>
                 </div>
             {% endif %}
         </div>
