--- a/public/stylesheets/room.css
+++ b/public/stylesheets/room.css
@@ -1,63 +1,195 @@
-.role-card {
-	text-align: center;
-	padding: 15px;
-	font-size: 24px;
-	color: grey;
+.container-game-card {
+	margin: 0;
+	min-height: 450px;
+	display: -webkit-box;
+	display: flex;
+	-webkit-box-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	justify-content: center;
 }
 
-.container-game-card {
-	width: 215px;
-	height: 300px;
+.container-card {
 	position: relative;
-	-webkit-perspective: 800px;
-	-ms-perspective: 800px;
-	perspective: 800px;
-	border-radius: 4px;
-	margin: auto;
+	width: 300px;
+	height: 400px;
+	min-width: 300px;
+	min-height: 400px;
+	margin: 4px;
+	-webkit-perspective: 1000px;
+	perspective: 1000px;
+}
+
+.active {
+	-webkit-transform: translateZ(0px) rotateY(180deg) !important;
+	transform: translateZ(0px) rotateY(180deg) !important;
+}
+.active:after {
+	display: none;
 }
 
 .game-card {
+	display: inline-block;
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	cursor: pointer;
+	-moz-backface-visibility: hidden;
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	-webkit-transition: -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	transition: -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275), -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	border-radius: 6px;
-	box-shadow: 0 6px 16px rgba(0,0,0,0.15);
-	cursor: pointer;
+	-webkit-transform: translateZ(-100px);
+	transform: translateZ(-100px);
+	-webkit-transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+	transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
-
-.game-card .card-game-back, .game-card .card-game-front {
+.game-card:after {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	border-radius: 5px;
+	box-shadow: 0 14px 50px -4px rgba(0, 0, 0, 0.15);
+	opacity: 0;
+	-webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1.4);
+	transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1.4);
+}
+.game-card:hover {
+	-webkit-transform: translateZ(0px);
+	transform: translateZ(0px);
+}
+.game-card:hover:after {
+	opacity: 1;
+}
+.game-card .side {
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-	border-radius: 6px;
-	background: #fff;
-	display: -ms-flexbox;
-	display: box;
+	border-radius: 5px;
+	background-color: white;
+}
+.game-card .front {
+	z-index: 2;
+}
+.game-card .back {
+	-webkit-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+}
+.game-card .info {
+	padding: 16px;
+}
+
+.front .img {
+	background-color: #dadce2;
+	background-position: center;
+	background-size: cover;
+	border-radius: 5px 5px 0 0;
+	width: 100%;
+	height: 250px;
+}
+.front .img1 {
+	background-image: url(http://i.imgur.com/1aE1nMA.jpg);
+}
+
+.back {
+	position: relative;
+}
+.back h2 {
+	margin-top: 6px;
+	margin-bottom: 18px;
+}
+.back .reviews {
+	display: -webkit-box;
+	display: flex;
+	-webkit-box-align: center;
+	align-items: center;
+	margin-bottom: 12px;
+	cursor: pointer;
+}
+.back .reviews p {
+	color: #c4c4c4;
+	font-weight: 300;
+	margin: 1px 0 0 6px;
+	-webkit-transition: 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
+}
+.back .reviews:hover p {
+	color: #555;
+}
+.back li {
+	line-height: 22px;
+	margin: 2px 0 6px 0;
+}
+.back .btn {
+	position: absolute;
+	bottom: 16px;
+	width: calc(100% - 32px);
+	height: 56px;
+	display: -webkit-box;
+	display: flex;
+	-webkit-box-align: center;
+	align-items: center;
 	-webkit-box-pack: center;
-	-o-box-pack: center;
-	font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-	-webkit-font-smoothing: antialiased;
-	color: #47525d;
-	text-align: center;
+	justify-content: center;
+	background-color: #FFC324;
+	background-image: -webkit-gradient(linear, right top, left top, from(#FFB714), to(#FFE579));
+	background-image: linear-gradient(-90deg, #FFB714, #FFE579);
+	border-radius: 5px;
+	cursor: pointer;
+}
+.back .btn:hover h4 {
+	-webkit-transform: translateX(0px);
+	transform: translateX(0px);
+}
+.back .btn:hover svg {
+	-webkit-transform: translateX(0px);
+	transform: translateX(0px);
+	opacity: 1;
+}
+.back .btn h4 {
+	-webkit-transform: translateX(12px);
+	transform: translateX(12px);
+	-webkit-transition: -webkit-transform 0.3s ease-out;
+	transition: -webkit-transform 0.3s ease-out;
+	transition: transform 0.3s ease-out;
+	transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+}
+.back .btn svg {
+	margin: 1px 0 0 4px;
+	-webkit-transform: translateX(-8px);
+	transform: translateX(-8px);
+	opacity: 0;
+	-webkit-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
 }
 
-.game-card .card-game-back {
-	-webkit-transform: rotateY(180deg);
-	transform: rotateY(180deg);
+.card-instruction {
+	text-align: left;
+	font-size: 10px;
+	margin-top: 55px;
 }
 
-.game-card.flipped {
-	-webkit-transform: rotateY(180deg);
-	transform: rotateY(180deg);
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .room-container {
 	padding: 2em;
