--- a/public/stylesheets/room.css
+++ b/public/stylesheets/room.css
@@ -1,3 +1,48 @@
+/*
+ * DESIGN POUR LES CARTES EN JEU
+ */
+#role {
+	display: inline-block;
+}
+
+#icon-status {
+	display: inline-block;
+	font-size: 19px;
+}
+
+.div-btn-card {
+	position: absolute;
+	bottom: 27px;
+	left: 10px;
+	width: 92%;
+}
+
+.btn-vibrate {
+	display: inline-block;
+	width: 100%;
+	margin-bottom: 1%;
+}
+
+.info {
+	text-align: center;
+}
+
+.btn-death {
+	display: inline-block;
+	width: 100%;
+	margin-bottom: 1%;
+}
+
+.btn-warning {
+	width: 100%;
+	font-size: 12px;
+}
+
+.btn-danger {
+	width: 100%;
+	font-size: 12px;
+}
+
 .container-game-card {
 	margin: 0;
 	min-height: 450px;
@@ -11,11 +56,9 @@
 
 .container-card {
 	position: relative;
-	width: 300px;
-	height: 400px;
-	min-width: 300px;
-	min-height: 400px;
-	margin: 4px;
+	width: 225px;
+	height: 340px;
+	margin: 5px;
 	-webkit-perspective: 1000px;
 	perspective: 1000px;
 }
@@ -81,12 +124,12 @@
 }
 
 .front .img {
-	background-color: #dadce2;
+	background-color: #979aa2;
 	background-position: center;
 	background-size: cover;
 	border-radius: 5px 5px 0 0;
 	width: 100%;
-	height: 250px;
+	height: 120px;
 }
 .front .img1 {
 	background-image: url(http://i.imgur.com/1aE1nMA.jpg);
@@ -96,8 +139,7 @@
 	position: relative;
 }
 .back h2 {
-	margin-top: 6px;
-	margin-bottom: 18px;
+	margin-bottom: 3px;
 }
 .back .reviews {
 	display: -webkit-box;
@@ -121,80 +163,23 @@
 	line-height: 22px;
 	margin: 2px 0 6px 0;
 }
-.back .btn {
-	position: absolute;
-	bottom: 16px;
-	width: calc(100% - 32px);
-	height: 56px;
-	display: -webkit-box;
-	display: flex;
-	-webkit-box-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	justify-content: center;
-	background-color: #FFC324;
-	background-image: -webkit-gradient(linear, right top, left top, from(#FFB714), to(#FFE579));
-	background-image: linear-gradient(-90deg, #FFB714, #FFE579);
-	border-radius: 5px;
-	cursor: pointer;
-}
-.back .btn:hover h4 {
-	-webkit-transform: translateX(0px);
-	transform: translateX(0px);
-}
-.back .btn:hover svg {
-	-webkit-transform: translateX(0px);
-	transform: translateX(0px);
-	opacity: 1;
-}
-.back .btn h4 {
-	-webkit-transform: translateX(12px);
-	transform: translateX(12px);
-	-webkit-transition: -webkit-transform 0.3s ease-out;
-	transition: -webkit-transform 0.3s ease-out;
-	transition: transform 0.3s ease-out;
-	transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-}
-.back .btn svg {
-	margin: 1px 0 0 4px;
-	-webkit-transform: translateX(-8px);
-	transform: translateX(-8px);
-	opacity: 0;
-	-webkit-transition: all 0.3s ease-out;
-	transition: all 0.3s ease-out;
-}
 
 .card-instruction {
 	text-align: left;
 	font-size: 10px;
-	margin-top: 55px;
+	margin-top: 124px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*
+ * DESIGN CONTAINER PRINCIPAL
+ */
 .room-container {
 	padding: 2em;
 }
 
+/*
+ * DESIGN LOBBY
+ */
 .head-title-lobby {
 	filter: drop-shadow(2px 2px 4px black);
 	color: #992626;
@@ -221,6 +206,9 @@
 	box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.3);
 }
 
+/*
+ * DESIGN IN GAME
+ */
 .in-game-div {
 	display: none;
 }
