--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -46,7 +46,7 @@
                                     <div class="img img3"></div>
                                     <div class="info">
                                         <h2>{{ pseudo }}</h2>
-                                        <p id="card-instruction">Cliquez sur la carte pour découvrir votre rôle. Ne le montrez à personne !</p>
+                                        <p class="card-instruction">Cliquez sur la carte pour découvrir votre rôle. Ne le montrez à personne !</p>
                                     </div>
                                 </div>
                                 <div class="side back">
