To be able send an vibrate on mobile

--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -67,7 +67,7 @@
 
             {% if admin == 1 %}
                 <div class="in-game-admin-div">
-                    <div class="container-game-card admin-cards row">
+                    <div class="container-game-cards admin-cards row">
                     </div>
                 </div>
             {% endif %}
