--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -15,6 +15,11 @@
         <input type="hidden" id="maxPlayerLimit" value="{{ maxPlayerLimit }}">
         <input type="hidden" id="cardsInGame" data-value="{{ cardsInGame }}">
     </div>
+    {% if admin == 0 %}
+        <div id="overlay-killed" style="position: fixed; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.88); z-index: 99;display: none">
+            <h2 id="pseudo-killed">TEST</h2>
+        </div>
+    {% endif %}
     <div class="room-container">
         <div class="lobby-div">
             <h2 class="head-title-lobby">LOBBY</h2>
@@ -79,6 +84,7 @@
     {{ parent() }}
     <script type="module" src="/js/game_infos.js"></script>
     <script type="module" src="/js/start_game.js"></script>
+    <script type="module" src="/js/custom.js"></script>
 
     {% if hasBeenCreate  == '1' %}
         <script type="module" src="/js/create_game_room.js"></script>
