--- a/public/stylesheets/room.css
+++ b/public/stylesheets/room.css
@@ -213,6 +213,24 @@
 	display: none;
 }
 
+/*
+ * DESIGN OVERLAY QUAND QUELQUUN MEURT
+ */
+#overlay-killed {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.88);
+	z-index: 99;
+	font-size: 2em;
+	color: #7b0606;
+	margin: auto;
+	display: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 @media screen and (max-width: 570px) {
 	.list-players {
 		margin: auto;
