--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -16,8 +16,7 @@
         <input type="hidden" id="cardsInGame" data-value="{{ cardsInGame }}">
     </div>
     {% if admin == 0 %}
-        <div id="overlay-killed" style="position: fixed; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.88); z-index: 99;display: none">
-            <h2 id="pseudo-killed">TEST</h2>
+        <div id="overlay-killed">
         </div>
     {% endif %}
     <div class="room-container">
