Check if game already exist with name choose

--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -16,7 +16,7 @@
         <input type="hidden" id="cardsInGame" data-value="{{ cardsInGame }}">
     </div>
     {% if admin == 0 %}
-        <div id="overlay-killed">
+        <div id="overlay-killed" style="display: none">
         </div>
     {% endif %}
     <div class="room-container">
