--- a/views/index.twig
+++ b/views/index.twig
@@ -26,7 +26,7 @@
             {% include './main-menu/create-room.twig' %}
         {% endblock %}
 
-        {% block howTo %}
+        {% block howToLearn %}
             {% include './main-menu/how-to-learn.twig' %}
         {% endblock %}
     </div>
