--- a/views/main-menu/how-to-learn.twig
+++ b/views/main-menu/how-to-learn.twig
@@ -1,33 +1,15 @@
-<div style="display: none" class="settings-div">
+<div style="display: none" class="how-to-learn-div">
     <h2 class="head-title-form">COMMENT JOUER A <i>THE LOST DOG</i></h2>
 
     <div class="jumbotron" id="story">
-        <h1 class="display-4">L'histoire de chien perdu</h1>
-        <p class="lead">Voici l'histoire de chien perdu</p>
-        <hr class="my-4">
-        <p>
-            La légende raconte qu'il y a fort longtemps, un homme aurait abandonné un chien dans la forêt perdu (The lost forrest) du mystérieux village black lake. <br>
-            Le chien serait alors resté des années à airer dans cette forêt, sombre et pleine de mystères ...
-            Jamais personne ne sut ce qu'il est devint, mais chaque année la légende raconte que l'esprit du Chien perdu (The lost dog) reviendrait pour se venger des humains et prendre possession
-            d'une personne dans la ville afin de pouvoir tuer des humains sans attirer les regards suspects des autres villageois.
-            La légende dit également que le chien les emmènerait si profond dans la forêt perdu, que cela les ferait sombrer dans la folie afin de pouvoir se nourrir de leur âme.
-        </p>
+        <h1 class="display-4">BIENTOT DISPONIBLE</h1>
     </div>
 
     <div class="jumbotron" id="roles">
-        <h1 class="display-4">Déroulement d'une partie classique</h1>
-        <hr class="my-4">
-        <p>
-            Quand la nuit tombe l'ordre des rôles :<br>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"><b>1-</b> Geek <span class="badge badge-pill badge-success"> </span><br></li>
-            <li class="list-group-item"><b>1.bis-</b> Le prêtre (une seule fois) <span class="badge badge-pill badge-success"> </span><br></li>
-            <li class="list-group-item"><b>2-</b> Chien perdu <span class="badge badge-pill badge-danger"> </span><br></li>
-            <li class="list-group-item"><b>3-</b> Sans-abri <span class="badge badge-pill badge-danger"> </span><br></li>
-            <li class="list-group-item"><b>4-</b> Pisteur des montagnes <span class="badge badge-pill badge-success"> </span><br></li>
-            <li class="list-group-item"><b>5-</b> Le taxidermiste <span class="badge badge-pill badge-success"> </span><br></li>
-            <li class="list-group-item"><b>6-</b> Jack l'égorgeur <span class="badge badge-pill badge-success"> </span><br></li>
-        </ul>
-        </p>
+        <h1 class="display-4">BIENTOT DISPONIBLE</h1>
+    </div>
+
+    <div class="group-button-create">
+        <a role="button" class="btn btn-lg back-button hvr-icon-back hvr-shutter-out-horizontal" id="backHowToLearn"><i class="fa fa-chevron-circle-left hvr-icon"></i>  Retour</a>
     </div>
 </div>
